app/static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

body{
    position: relative;
    min-height: 100vh;
    font-family: Montserrat, "Roboto Light", sans-serif;
}

body::after {
  content: '';
  display: block;
  height: 60px; /* Set same as footer's height */
}
table{
    max-width: 1350px;
}
table td{
    font-size: 14px;
}
table tr{
    font-size: 14px;
}

legend{
    font-weight: 600;
}

/* Home CSS */
.headline{

}
.text-center {
  text-align: center;
}
.logo{
    max-width: 200px;
}
.feature-icon{
    max-width: 50px;
}
.redlist-tagline{
    line-height: 2.2em;
    font-weight: 600;
}
.redlist-subheading{
    line-height: 2em;
    font-weight: 600;
}
.my-binoculars{

}
.pill-button-close{
    padding: 1px 1px 1px 1px;
    background-color: transparent;
    border: 0;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    white-space: nowrap;
    line-height: 1rem;
    font-size: 0.9rem;
}
.my-pill-badge{
    color: #f8f9fa;
    background-color: #607d8b;
    line-height: inherit;
    cursor: pointer;
}
.my-pill-badge:hover{
    color: gray;
    background-color: whitesmoke;
}
.my-close-icon{
    color: lightcoral;
}
.my-close-icon:hover{
    color: red;
}
.habitat-list-row{

}
.habitat-list-row:hover{
    cursor: pointer;
    background-color: whitesmoke;
}
.edit-button{

}
.form-title {
    text-decoration: underline;
    font-weight: bold;
}
/* End Home CSS */


/* Search CSS */
.status-selector{

}
/* End Search CSS */


/* Footer CSS */
.footer-text{
    text-align: center;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px; /* Set the fixed height of the footer here */
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}
/* End Footer CSS */

